syntax = "proto3";
package user.v1;
option go_package = "user/api/user/v1;v1";

service User{
	rpc CreateUser(CreateUserInfo) returns (UserInfoResponse); // 创建用户
}

// 创建用户所需字段
message  CreateUserInfo{
	string nickName = 1;
	string password = 2;
	string mobile = 3;
}

// 返回用户信息
message UserInfoResponse{
	int64 id = 1;
	string password = 2;
	string mobile = 3;
	string nickName = 4;
	int64 birthday = 5;
	string gender = 6;
	int32 role = 7;
}